save txt + print elemento corrente

--- a/refs/selenium.ipynb
+++ b/refs/selenium.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introdução ao Selenium"
+    "# estudando Selenium"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O Selenium é utilizado originalmente para fazer testes de aplicações web.\n",
+    "O Selenium é utilizado originalmente para fazer teste de aplicações web.\n",
     "\n",
-    "__Requisitos:__ \n",
+    "Requisitos: \n",
     "1. Anaconda;\n",
     "2. [Selenium](https://www.selenium.dev/documentation/webdriver/getting_started/install_drivers/). (pip install selenium)\n",
     "3. [Chromedriver](https://chromedriver.chromium.org/downloads). \n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -56,66 +56,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acessando informações de uma página."
+    "## Para acessar informações de uma página.\n",
+    "Seguimos usando o selenium."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importações de bibliotecas \n",
     "from selenium import webdriver\n",
     "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
-    "driver.get('http://google.com')"
+    "#driver.get('http://google.com')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# identficando o elemento da barra de pesquisa com o endereço \"XPATH\"\n",
     "barra_pesquisa = '/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input'\n",
-    "#el_bp, elemento_barraPesquisa é a barra de pesquisa\n",
+    "#el_bp é a barra de pesquisa\n",
     "el_bp = driver.find_element_by_xpath(barra_pesquisa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testando envio de texto para a barra de pesquisa:\n",
+    "el_bp = driver.find_element_by_xpath(barra_pesquisa)\n",
     "el_bp.send_keys('selenium')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#também podemos enviar o caracter de \"nova linha\", \"\\n\", assim n precisamos clicar no botão de pesquisar\n",
-    "el_bp.clear()\n",
-    "el_bp.send_keys('selenium\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,35 +123,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Buscando informações no Linkedin: \n",
+    "# Busando informações no Linkedin: \n",
     "\n",
     "Buscando por ciência de dados na página (https://br.linkedin.com/jobs/ci%C3%AAncia-de-dados-vagas?position=1&pageNum=0)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = 'https://br.linkedin.com/jobs/ci%C3%AAncia-de-dados-vagas?position=1&pageNum=0'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# abre a pagina \n",
-    "driver.get(URL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testando busca de elementos"
+    "driver.get('https://br.linkedin.com/jobs/ci%C3%AAncia-de-dados-vagas?position=1&pageNum=0')"
    ]
   },
   {
@@ -172,7 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testando busca de elementos usando o xpath (a janela deve estar aberta inteira, para mostrar o card com conteúdo da oferta ativa selecionada na coluna da esquerda)\n",
+    "#buscando elementos usando o xpath\n",
+    "driver.find_element_by_xpath('/html/body/div[1]/div/section/div[2]/div/section[1]/div/div')\n",
     "descricao = driver.find_element_by_class_name('description')\n",
     "descricao.text\n",
     "print(descricao.text)"
@@ -187,70 +159,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aqui vasculha elemento por elemento.\n",
+    "resultados = driver.find_elements_by_class_name('base-card')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46"
+       "25"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Aqui vasculha elemento por elemento.\n",
-    "resultados = driver.find_elements_by_class_name('base-card__full-link')\n",
     "#quantidade de elementos\n",
     "len(resultados)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Identificando coluna da esquerda, com a listagem de ofertas:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Explorando resultados..."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#explorando os resultados com o método \"click\"...\n",
-    "#atenção: para testar, o modo de \"inspect\" do navegador deve estar fechado!\n",
-    "resultados[9].click()"
+    "#Aqui selecionamos somente a barra da esquerda, dos resultados das empresas\n",
+    "result_list = driver.find_element_by_class_name('two-pane-serp-page__results-list')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pessoa Cientista de Dados (Data Science) | Tech & Produtos'"
+       "25"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resultados[2].text"
+    "resultados = result_list.find_elements_by_tag_name('li')\n",
+    "len(resultados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#explorando os resultados...\n",
+    "resultados[2].click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Application Database Administrator - DBMS\\nApplication Database Administrator - DBMS\\nIBM\\nHortolândia, SP\\nSeja um dos primeiros a se candidatar\\nHá 2 semanas'"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# obtendo conteúdo das listas\n",
+    "resultados[3].text"
    ]
   },
   {
@@ -262,51 +259,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "46"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resultados = driver.find_elements_by_class_name('base-card__full-link')\n",
-    "#quantidade de elementos\n",
-    "len(resultados)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lista vazia para receber conteudo\n",
     "listagem_ofertas = []\n",
+    "\n",
     "for i in resultados:\n",
     "    i.click()\n",
+    "    sleep(4)\n",
     "    descricao = driver.find_element_by_class_name('description')\n",
-    "    listagem_ofertas.append(descricao.text)"
+    "    listagem_ofertas.append(descricao.text)\n",
+    "print(listagem_ofertas)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,10 +295,65 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Requisitos Cursando ensino superior em Matemárica Matemática Aplicada Estatística Ciência da Computação ou áreas correlatas. Experiência profissional ou escolar com Microsoft Excel. Experiência profissional ou escolar em linguagem de programação. Linguagens Python e SQL são diferenciais. Conhecimento em sistema operacional Linux (terminal).\\n\\n\\n\\n\\n\\nNão informado\\n\\n\\n\\n\\n\\nA combinar\\n\\n\\n\\nEstágio em Ciência da Computação\\n\\n\\n\\nGrhats Recursos Humanos\\n\\nConsultoria de Recursos Humanos.\\n\\n\\n\\nRecursos Humanos/ Recrutamento e seleção'"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Aqui, vamos verificar o conteúdo da lista \"listagem_ofertas\" para ter certeza que deu tempo de preencher todos os campos. "
+    "listagem_ofertas[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Buscamos um Cientista de Dados para atuar nas frentes de inovação e tendências de mercado, com experiência em previsão de dados para área financeira do negócio, deixando a análise financeira do negócio preditiva.\\n\\nPerfil com curiosidade, interesse por assuntos de Ciência de Dados, forte pensamento analítico, organização, trabalho em equipe e boa comunicação.\\n\\n\\n\\n\\n\\nExibir mais\\nTipo de emprego\\nTempo integral\\nAs indicações dobram suas chances de conseguir uma entrevista na Timeware\\nVeja quem você conhece'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados[1].click()\n",
+    "descricao = driver.find_element_by_class_name('decorated-job-posting__details')\n",
+    "descricao.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Timeware'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados[1].text.split('\\n')[2]"
    ]
   },
   {
@@ -328,48 +362,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listagem_ofertas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Identificamos elementos vazios. Vamos retornar e colocar um tempo de \"sleep\" para dar tempo para carregar as páginas antes de obter as informações."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "listagem_ofertas = []\n",
+    "listagem_empresas = []\n",
     "for i in resultados:\n",
     "    i.click()\n",
-    "    sleep(1)\n",
-    "    descricao = driver.find_element_by_class_name('description')\n",
-    "    listagem_ofertas.append(descricao.text)"
+    "    print(i.text)\n",
+    "    listagem_empresas.append(descricao.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46"
+       "'https://br.linkedin.com/jobs/ci%C3%AAncia-de-dados-vagas?position=2&pageNum=0&currentJobId=3161460979'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(listagem_ofertas)"
+    "driver.current_url"
    ]
   }
  ],
