--- a/selenium-linkedin.ipynb
+++ b/selenium-linkedin.ipynb
@@ -72,7 +72,9 @@
      "text": [
       "1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,Num resultados: 34   Num desc. salvos: 16\n",
       "17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,Num resultados: 56   Num desc. salvos: 34\n",
-      "35,36,37,38,39,40,"
+      "35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,Num resultados: 77   Num desc. salvos: 56\n",
+      "57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,Num resultados: 95   Num desc. salvos: 77\n",
+      "78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,Num resultados: 95   Num desc. salvos: 95\n"
      ]
     }
    ],
@@ -103,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantidade de ofertas coletadas: 95\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(f'Quantidade de ofertas coletadas: {len(listagem_ofertas)}')"
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
